# Compdata-Generator

./: .gitignore  README.md
fce-app/: README.md  package-lock.json  package.json
fce-app/src/: index.html
fce-app/src-tauri/: Cargo.toml  tauri.conf.json
fce-app/src-tauri/capabilities/: default.json
fce-app/src-tauri/src/: main.rs
fce-app/src/css/: styles.css
fce-app/src/js/: clubchamp.js  core.js  cup.js  international.js  league.js  schedule.js  tauri-bridge.js  tools.js  ui.js
